@@ -1,3 +1,8 @@
+2007-07-05  Rudi Schlatte  <rudi@constantly.at>
+
+	* maude-mode.el (maude-font-lock-keywords, maude-warnings): fth,
+	endfth are in core maude.
+
 2007-06-27  Rudi Schlatte  <rudi@constantly.at>
 
 	* maude-mode.el (maude-font-lock-keywords): more permissive
